--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: vprodb
+  name: vvprodb
   labels:
-    app: vprodb
+    app: vvprodb
 spec:
   selector:
     matchLabels:
-      app: vprodb
+      app: vvprodb
   replicas: 1
   template:
     metadata:
       labels:
-        app: vprodb
+        app: vvprodb
     spec:
       containers:
-        - name: vprodb
+        - name: vvprodb
           image: deenprofile/vprofiledb:V1
           args:
             - "ignore-db-dir=lost+found"
