--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -1,21 +1,44 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: vprodb
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 256Mi
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: vprodb
+spec:
+  selector:
+    app: vprodb
+  ports:
+  - port: 3306
+    targetPort: 3306
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: vvprodb
+  name: vprodb
   labels:
-    app: vvprodb
+    app: vprodb
 spec:
   selector:
     matchLabels:
-      app: vvprodb
+      app: vprodb
   replicas: 1
   template:
     metadata:
       labels:
-        app: vvprodb
+        app: vprodb
     spec:
       containers:
-        - name: vvprodb
+        - name: vprodb
           image: deenprofile/vprofiledb:V1
           volumeMounts:
             - mountPath: /var/lib/mysql
