--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -1,26 +1,3 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: vprodb
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 256Mi
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: vprodb
-spec:
-  selector:
-    app: vprodb
-  ports:
-  - port: 3306
-    targetPort: 3306
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -40,6 +17,11 @@ spec:
       containers:
         - name: vprodb
           image: deenprofile/vprofiledb:V1
+        - tolerations:
+          - effect: NoSchedule
+            key: taintkey1
+            operator: Equal
+            value: taintvalue1
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: vpro-db-data
