--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -18,8 +18,7 @@ spec:
         - name: vprodb
           image: deenprofile/vprofiledb:V1
           args:
-              - "--ignore-db-dir"
-              - "lost+found"
+            - "--ignore-db-dir=lost+found"
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: vpro-db-data
