vprofile app svc

--- a/rmq-dep.yaml
+++ b/rmq-dep.yaml
@@ -23,7 +23,7 @@ spec:
           env:
             - name: RABBITMQ_DEFAULT_PASS
               valueFrom:
-                secretKeyRed:
+                secretKeyRef:
                   name: app-secret
                   key: rmq-pass
             - name: RABBITMQ_DEFAULT_USER
