--- a/vproapp-service.yaml
+++ b/vproapp-service.yaml
@@ -1,12 +1,25 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: vproapp-service
+  name: mydb
 spec:
   ports:
     - port: 80
       targetPort: vproapp-port
       protocol: TCP
+  selector:
+    app: vproapp
+  type: LoadBalancer
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: memcache
+spec:
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: vproapp-port
   selector:
     app: vproapp
   type: LoadBalancer
