--- a/vproapp-service.yaml
+++ b/vproapp-service.yaml
@@ -1,25 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mydb
+  name: vproapp-service
 spec:
   ports:
     - port: 80
       targetPort: vproapp-port
       protocol: TCP
-  selector:
-    app: vproapp
-  type: LoadBalancer
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: memcache
-spec:
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: vproapp-port
   selector:
     app: vproapp
   type: LoadBalancer
